# Yuzuriha-Rin

./: .gitignore  API_EXAMPLES.md  ARCHITECTURE_REFACTORING_PLAN.md  CODE_VIOLATIONS_REPORT.md  COMPLETE_VERIFICATION.md  FINAL_VERIFICATION.md  FRONTEND_IMPROVEMENTS.md  IMPLEMENTATION.md  IMPLEMENTS_NOW.md  IMPLEMENTS_OLD.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README.zh-CN.md  REFACTORING_SUMMARY.md  SETUP.md  STICKER_MANAGER_README.md  TECHNICAL_OVERVIEW.md  main.py  pyproject.toml  run.py  sticker_manager.py  test_behavior.py  test_database.py  test_imports.py
assets/configs/: image_descriptions.json
data/: image_alter.json
docs/: emotional_colors.html
frontend/: app.js  chat.js  chat_ws.js  chat_ws_v2.js  index.html  styles.css
frontend/styles/: styles.css
models/scripts/: predict_windows.py  train_windows.py
scripts/ml_training/: 00_bert_wwm_ext_baseline.ipynb  01_intent_data_analysis.ipynb  02_intent_model_training.ipynb  03_baseline.ipynb  README.md  final_predict.py  intent_romaji_mapping.py
src/: config.py
src/api/: conversation_store.py  dependencies.py  http_routes.py  llm_client.py  main.py  routes.py  schemas.py  websocket_global.py  websocket_session.py  ws_global_routes.py  ws_routes.py
src/behavior/: __init__.py  coordinator.py  emotion.py  models.py  pause.py  same_pinyin_finder.py  segmenter.py  timeline.py  typo.py
src/core/: schemas.py
tests/: test_behavior.py  test_character_update.py  test_message_recall.py  test_sticker_packs_field.py  test_sticker_packs_update.py  test_tool_service.py  verify_character_update.py
(+80 files in other folders)
